v94: fix the Logout UI to match the container height of the Friend List so the background fills in the white space and is consistent

--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ body {
 #logout-popup {
   position: relative;
   width: 100%;
-  height: 228px;
+  height: 192px;
   background: #382418;
   display: flex;
   justify-content: center;
@@ -120,7 +120,7 @@ body {
 .list-container {
   background: #474745;
   border: 2px solid #5a473a;
-  height: 182px;
+  height: 172px;
   overflow-y: auto;
 }
 
